plugins/groovy/testdata/highlighting/pre30/safeIndexAccess.groovy
a<error descr="Safe index access is not supported in current version">?</error>[b]